fix alignment on bio

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -796,15 +796,17 @@ ul.paginationBottom {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    justify-content: center;
+    align-items: center;
     #profile-pic-container {
       background-color: grey;
-      display: block;
+      display: inline-block;
+      text-align: center;
       position: relative;
       border-radius: 50%;
       max-width: 150px;
       max-height: 150px;
       overflow: hidden;
-      margin: auto;
       margin-bottom: 15px;
     }
     #profile-pic {
@@ -815,7 +817,6 @@ ul.paginationBottom {
       display: block;
       max-width: 75%;
       padding: 0 30px;
-      margin: auto;
       #user-name {
         text-transform: uppercase;
         font-weight: bold;
